<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_scrollFlags="scroll">

    <data>

        <variable
            name="fragmentAddMatching"
            type="op.gg.joinus.main.AddMatchingFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black_13" />

            <EditText
                android:id="@+id/pt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_add_matching_title"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black_30"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lb_num_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/lb_add_matching_numPeople"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_minus_people"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_btn_minus"
                        android:clickable="true"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/txt_num_people"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0"
                        android:includeFontPadding="false"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_plus_people"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_btn_plus"
                        android:clickable="true"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        app:backgroundTint="@null" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_13" />

            <TextView
                android:id="@+id/lb_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/lb_add_matching_start_date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0"
                    android:isScrollContainer="true"
                    android:textColor="@color/black_60"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/btn_change_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/btn_add_matching_start_date"
                    android:textColor="@color/floating_background"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_13" />

            <TextView
                android:id="@+id/lb_game_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lb_add_matching_select_game"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_game_lol"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_no_match"
                        android:button="@drawable/st_checked_game"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rb_game_ow"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_no_match"
                        android:button="@drawable/st_checked_game" />

                    <RadioButton
                        android:id="@+id/rb_game_sa"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/rb_game_pubg"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:button="@null" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_13" />

            <TextView
                android:id="@+id/lb_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lb_join_voice"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_voice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_voice_yes"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0"
                        android:background="@drawable/bg_rb_checked"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/rb_add_matching_yes"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <RadioButton
                        android:id="@+id/rb_voice_no"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_weight="0"
                        android:background="@drawable/bg_rb_not_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/rb_add_matching_no"
                        android:textColor="@color/white_60"
                        android:textSize="13sp" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:id="@+id/View"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_13" />

            <TextView
                android:id="@+id/lb_tier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lb_add_matching_tier"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_tier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="0"
                    android:text="@string/txt_add_matching_tier_all"
                    android:textColor="@color/black_60"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/btn_change_tier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_add_matching_tier"
                    android:textColor="@color/floating_background"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>
